# rust-porto

./: README.md
profile/: Cargo.toml
profile/.devcontainer/: devcontainer.json  docker-compose.yaml
profile/src/: config.rs  main.rs
profile/src/controller/: mod.rs
profile/src/controller/auth/: login.rs  register.rs
profile/src/controller/data/: create_product.rs  mod.rs  read.rs
profile/src/controller/email/: send_email.rs
profile/src/interface/auth/: login.rs  register.rs
profile/src/interface/data/: create_product.rs  read.rs
profile/src/model/: mod.rs
profile/src/model/auth/: login.rs  register.rs
profile/src/model/data/: create_product.rs  mod.rs  read.rs
profile/src/testcase/integration/: login.rs
profile/src/testcase/unit_test/: login.rs
project_1/: Cargo.toml
project_1/.devcontainer/: Dockerfile  devcontainer.json  dokcer-composer.yaml
project_1/src/: config.rs  main.rs
project_1/src/controller/user/: mod.rs  user_get.rs  user_patch.rs  user_post.rs  user_put.rs
project_1/src/interface/user/: mod.rs  user_get.rs  user_patch.rs  user_post.rs  user_put.rs
project_1/src/model/: mod.rs
project_1/src/model/user/: mod.rs  user_get.rs  user_patch.rs  user_post.rs  user_put.rs
project_new/: Cargo.toml  note.txt
project_new/src/: config.rs  main.rs
project_new/src/controller/: mod.rs  product.rs  show_image.rs  upload_image.rs
project_new/src/interface/: mod.rs  product.rs  upload_image.rs
project_new/src/model/product/: create.rs  delete.rs  detail.rs  list.rs  mod.rs  update.rs  update_2.rs
sandbox/src/: main.rs
