[package]
name = "profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*" 
bson = "*" 
json = "*" 
serde = { version = "*", features = ["derive"] }
serde_json = "*" 
futures = "*" 
futures-util = "*" 
smcore = { git = "https://ericksonskinmystery:ATBBxMNgV2kjKYtjbdvAjT8cEYDhC5654249@bitbucket.org/skinmystery/smcore.git" }
smcore-derive = { git = "https://ericksonskinmystery:ATBBxMNgV2kjKYtjbdvAjT8cEYDhC5654249@bitbucket.org/skinmystery/smcore-derive.git" }

#database 
mongodb = { version = "*", default-features = false, features = ["sync"] } 
dotenv = "*"
redis = "*" 

#hash 
jwt  = "*" 
hmac = "*" 
sha2 = "*"
tracing = "*"
chrono = {version="0.4.19", features = ["serde"]}
actix-multipart = "0.5.0"
env_logger = "0.10.0"
lettre = "0.10.3"
